--- a/customer/templates/customer/make_order.html
+++ b/customer/templates/customer/make_order.html
@@ -67,7 +67,8 @@
         </div>
 
     {% else %}
-        <p>Нет позиций для оформления заказа</p>
+        <p>Нет позиций для оформления заказа, может вы забыли поставить галочку книгам, которые хотите купить?</p>
+        <a href="{% url 'cart' %}" class="btn btn-back-forgot">Назад в корзину</a>
     {% endif %}
 
 </div>
