--- a/store/static/store/scss/profile-order-detail.scss
+++ b/store/static/store/scss/profile-order-detail.scss
@@ -59,6 +59,9 @@
                         }
                         a {
                             color: $selected_color;
+                            &:hover {
+                                opacity: 0.8;
+                            }
                         }
                         .genres-book {
                             margin-bottom: 10px;
