--- a/store/static/store/scss/static-variables.scss
+++ b/store/static/store/scss/static-variables.scss
@@ -11,5 +11,5 @@ $green_color: rgb(0, 187, 0);
 $light_gray_color: #979797;
 
 
-$header_footer_color:#212529;
+$header_footer_color:#1c1f22;
 $center_color:#222D32;
