--- a/store/static/store/scss/profile-favourites.scss
+++ b/store/static/store/scss/profile-favourites.scss
@@ -64,6 +64,7 @@
             border-bottom: 2px solid $ligth_color;
             display: block;
             content: '';
+            padding-top: 10px;
         }
         &:last-child::after {
             display: none;
