--- a/store/static/store/scss/sidebar-genres.scss
+++ b/store/static/store/scss/sidebar-genres.scss
@@ -1,21 +1,12 @@
-// $header_heigth:80px;
-// $center_min_heigth:900px;
-// $footer_height:120px;
-
-// $header_footer_color:#171C4B;
-// $center_color:#8F5DF9;
-// $ligth_color:#fefbf1;
-
-
 @import "static-variables.scss";
 
 .genres {
     padding: 10px;
-    background-color: $ligth_color;
+    background-color: $header_footer_color;
     border-radius: 5px;
     .title {
         font-size: 24px;
-        color: black;
+        color: $ligth_color;
     }
     .genre {
         position: relative;
@@ -30,20 +21,20 @@
             width: 40px;
         }
         .genre-title {
-            color: black;
+            color: $ligth_color;
             font-size: 16px;
         }
         &:hover {
-            outline: 2px solid $header_footer_color;
+            outline: 2px solid $selected_color;
             border-radius: 5px;
-            background-color: #171c4b0e;
+            background-color: $opacity_selected_color
         }
     }
     .all {
         display: inline-block;
         padding: 10px;
         margin-top: 15px;
-        color: black;
+        color: $light_gray_color;
         font-size: 14px;
         &:hover {
             opacity: 0.7;
