--- a/store/static/store/scss/style.scss
+++ b/store/static/store/scss/style.scss
@@ -49,7 +49,7 @@ body {
         }
         a:hover, 
         .selected {
-            opacity: 0.7;
+            color: $light_gray_color;
         }
         .serch-li {
             position: relative;
@@ -245,6 +245,9 @@ body {
 
     // user profile order detail scss
     @import "profile-order-detail.scss";
+
+    // user profile history scss
+    @import "profile-history.scss";
 
     // user profile settings scss
     @import "profile-settings.scss";
